--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: masked_text_input
 description: A new Flutter package.
 version: 0.0.1
-author:
-homepage:
+author: Yuda Prama<yudapramad@gmail.com>
+homepage: https://github.com/yudaprama/flutter_masked_text_input.git
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
